--- a/_newsletters/1.md
+++ b/_newsletters/1.md
@@ -4,5 +4,5 @@ year: '2023'
 week: '01'
 banner: >-
   https://raw.githubusercontent.com/itnewslat/assets/master/img/728x90/Banner-Resumen.jpg
-Layout: Newsletter
+Layout: newsletter
 ---
